--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -3,9 +3,10 @@
 @tailwind utilities;
 
 /* @import "tailwindcss"; */
-body {
-  margin: 0.2% 10% 0.5% 10%;
-  overflow-x: hidden;
+html,body {
+  /* margin: 0.2% 10% 0.5% 10%; */
+
+  height: 100%;
 }
 @media screen and (min-width: 200px) {
   body {
@@ -108,9 +109,15 @@ body {
 }
 
 @keyframes gradient {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .animate-gradient {
@@ -123,6 +130,12 @@ body {
 }
 
 @keyframes fadeIn {
-  from { opacity: 0; transform: translateY(-10px); }
-  to { opacity: 1; transform: translateY(0); }
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
